# -bazel_nodejs

./: .bazelignore  .bazelrc  .npmrc  BUILD.bazel  MODULE.bazel  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
app/: BUILD.bazel
app/src/: index.ts
common/: BUILD.bazel
common/src/: greeting.ts
