load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
)

npm_link_package(
    name = "node_modules/@bazel_nodejs/common",
    src = "//common:common",
)

copy_to_bin(
    name = "swcrc",
    srcs = [".swcrc"],
)

npm_link_all_packages(name = "node_modules")
