load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_skylib//lib:partial.bzl", "partial")

ts_project(
    name = "common_lib",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    tsconfig = "//:tsconfig",
    declaration = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:swcrc",
    ),
    deps = [
        # List dependencies here
    ],
)

npm_package(
    name = "common",
    srcs = [":common_lib"],
    package = "@bazel_nodejs/common",
    visibility = ["//visibility:public"],
)